Now using separate sprite, instead of extending. Still working on attaching sprite to each body piece.